--- a/Chapter5_Results.tex
+++ b/Chapter5_Results.tex
@@ -342,7 +342,7 @@ As can be seen from the results, for 100 Hz, there is almost no noticeable diffe
 
 The average deviation in terms of overall sound pressure level compared to the full reflective model can be found in tab. \ref{tab:mean_devaition_impedance}. A larger deviation to full reflective model means a larger absorption of the sound pressure. One can see that the difference between the smallest and the largest absorption degree is about 1 dB. And the absorptance of 0-degree angle is the median of the result set.
 
-From the results shown in this section it can be concluded that for a given normal incident absorption coefficient spectrum, the actual attenuation of the acoustic wave depends on the phase angle of the complex surface impedance. For a given absorption coefficient with value of 0.1, the actual attenuation of the pressure obtained varies from about 0.5 dB to 2 dB. For the case that only data for the absorption coefficient is available, it can be assumed that the surface impedance contains only a real part. In order to obtain a more accurate simulation result, not only the absorption spectrum of the material should be provided, but also the full impedance characteristic of the ground surface. This information can be obtained by for example an in-situ measurement of surface impedance using impedance tube method as described in \cite{hald_situ_2019, wolkesson_2013}.
+From the results shown in this section it can be concluded that for a given normal incident absorption coefficient spectrum, the actual attenuation of the acoustic wave depends on the phase angle of the complex surface impedance. For a given absorption coefficient with a value of 0.1, the actual attenuation of the pressure obtained varies from about 0.5 dB to 2 dB. For the case that only data for the absorption coefficient is available, it can be assumed that the surface impedance contains only a real part. In order to obtain a more accurate simulation result, not only the absorption spectrum of the material should be provided, but also the full impedance characteristic of the ground surface. This information can be obtained by for example an in-situ measurement of surface impedance using impedance tube method as described in \cite{hald_situ_2019, wolkesson_2013}.
 % comment on the rage of attenuation obtained ...
 
 \section{Effect of varying frequency steps per 1/3-octave band}
