--- a/Chapter3_Measurement.tex
+++ b/Chapter3_Measurement.tex
@@ -59,7 +59,7 @@ The total sound power of the enclosed sound source is then given by the sum of t
 % Beispiel für eine Grafik
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=12cm]{fig/Sound_power_measurement.png}
+\includegraphics[width=0.8\textwidth]{fig/Sound_power_measurement.png}
 \caption{Setup for sound power measurement.}
 \label{fig:soundpowersetup}
 \end{center}
@@ -252,7 +252,7 @@ In \cref{fig:frequencydomain}, the blue curve shows the amplitude of acoustic pr
         \label{fig:frequencydomain}
     \end{subfigure}
     
-    \caption{Mesurement data at position a, microphone 1 (0.5 m), loudspeaker front.}
+    \caption{Mesurement data at measurement position a, at \SI{0.5}{\meter} height above ground, loudspeaker located at the front of the bogie.}
     \label{fig:measurementsignal}
 \end{figure}
 
