--- a/Chapter6_Summary.tex
+++ b/Chapter6_Summary.tex
@@ -33,7 +33,7 @@ During the design process of the finite element model, a parameter study aimed a
 % variation of the model underfloor geometry
 The results obtained from the variation of the underfloor geometry pointed out that the number of contemplated underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in a acceptable range. To increase the prediction accuracy, at least the essential underfloor components i.e. the bogie frame and the wheel should be included to ensure a sufficient attenuation of the acoustic wave in the underfloor area.
 % variation of the ground impedance
-The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy if the absorption should be modeled, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to contain only real part. Same approach has been also used by Li et al. \cite{li_25d_2021} in their finite element simulation on railway acoustics. 
+The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy if the absorption should be modeled, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to contain only real part.
 % variation of the frequency steps per one-third octave band
 Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviation introduced by possible occurred destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band could already provide a comparable prediction accuracy as the initial model using nine steps while saving up almost half of the total computation time.
 
