--- a/literature.bib
+++ b/literature.bib
@@ -435,3 +435,41 @@ doi = {10.1121/1.1984860}
 	https://doi.org/10.1177/1077546307076901
 	},
 }
+
+@incollection{LUNDEN20093,
+	title = {1 - Introduction to wheel–rail interface research},
+	editor = {R. Lewis and U. Olofsson},
+	booktitle = {Wheel–Rail Interface Handbook},
+	publisher = {Woodhead Publishing},
+	pages = {3-33},
+	year = {2009},
+	isbn = {978-1-84569-412-8},
+	doi = {https://doi.org/10.1533/9781845696788.1.3},
+	url = {https://www.sciencedirect.com/science/article/pii/B978184569412850001X},
+	author = {R. Lundén and B. Paulsson},
+	keywords = {railway research, wheel–rail interface, train–track interaction, contact mechanics, information sources},
+	abstract = {Abstract:
+	For successful railway transportation, good performance of the wheel–rail interface is of the utmost importance and is, therefore, the subject of worldwide interdisciplinary research efforts. The present chapter should serve as an introduction and background to the following 20 chapters. A brief history of the wheel–rail interface research is given together with an account of the present situation. The main phenomena treated are contact stresses, contact friction and deterioration mechanisms which are related to cost, safety, maintenance, reliability, environment and energy consumption. Major fields of recent research are described followed by four examples of application. Ongoing projects, standardization efforts and legislation activities are reported. Some future trends in research are listed and sources of information are provided. It is emphasized that the wheel–rail interface must be treated as part of the larger train–track system, which means that a full optimization should be carried out on a systems level.}
+}
+
+@article{Noh_2017,
+	author = {Hee-Min Noh},
+	title ={Contribution analysis of interior noise and floor vibration in high-speed trains by operational transfer path analysis},
+	journal = {Advances in Mechanical Engineering},
+	volume = {9},
+	number = {8},
+	pages = {1687814017714986},
+	year = {2017},
+	doi = {10.1177/1687814017714986},
+	
+	URL = { 
+	https://doi.org/10.1177/1687814017714986
+	
+	},
+	eprint = { 
+	https://doi.org/10.1177/1687814017714986
+	
+	}
+	,
+	abstract = { A study on the contribution analysis of interior noise and floor vibration in high-speed trains was conducted using operational transfer path analysis. Initially, noise and vibration measurement at various locations on a high-speed train was conducted with accelerometers and microphones. Measurement positions were selected based on the dominant sources of noise and vibration aboard high-speed trains when traveling at high speeds. From the measurements, the characteristics of interior noise and floor vibration were deduced at various train speeds. In addition, noise and acceleration characteristics of the source positions at various speeds were also suggested. Synthesized results regarding interior noise and floor vibration were obtained from operational transfer path analysis, and the estimation was validated by comparison with measured results. The synthesized results were obtained by combining transfer functions obtained through operational transfer path analysis and measured signals from the sources. After validation, the contribution analysis of the interior noise and floor vibration was conducted from the synthesis of the transfer functions and the measurement results. Finally, the main sources of interior noise and the floor vibration in the frequency domain were derived from the contribution analysis. From the results, wheel noise and center pivot vibration were identified as the main causes of interior noise and floor vibration in a high-speed train at a speed of 300 km/h. }
+}
