--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 \tableofcontents   % Inhaltsverzeichnis
 
 %verwendete Symbole und Zeichen
-\include{Symbols}
+%\include{Symbols}
 
 
 \pagenumbering{arabic}
