--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,1 +1,5 @@
 \section*{Abstract}
+
+Noise reduction is a big topic in developing a sustainable and environmentally friendly modern rail vehicle. A significant part of the train noise comes from the vehicle underfloor area due to the rolling noise generated at the wheel-rail interface, which could negatively affect the vehicle exterior as well as the interior noise level through different propagation mechanisms. For this reason, it is of great importance to have a meaningful acoustic model that can investigate the underfloor noise already in the initial phase of the vehicle development process.
+
+This thesis presents the development of a 3D finite element model for predicting underfloor noise propagation of rail vehicles. The modeling approach is applied to a one-fourth model of the metro train type X-Wagen from Siemens. The developed model is then validated with an outer pressure field measurement in the car body surroundings. The obtained simulation results show a strong correlation between the predicted and the measured values. Beyond that, the effect of the variation of certain model parameters on the prediction accuracy of the finite element model is also investigated in the frame work of this thesis.
