--- a/Chapter6_Summary.tex
+++ b/Chapter6_Summary.tex
@@ -27,23 +27,22 @@ The simulations were done using the open-source FEM software openCFS. The obtain
 
 
 % parameter study
-Besides the validation of the developed finite element model, several parametric studies have been carried out within this thesis, which aimed to investigate the stability of the simulation results to the variation of several model parameters.
+Besides the validation of the developed finite element model, several parametric studies have been carried out within this thesis, which aimed to investigate the sensitivity of the simulation results with respect to the variation of several model parameters.
 % variation of the domain size
-During the design process of the finite element model, a parameter study aimed at finding a proper size of the exterior acoustic domain was performed. It has been shown that for our problem of interest, using a domain width of \SI{1}{\meter} could already provide good numerical accuracy without increasing the computational cost extensively. The study also showed that if the area of interest moved toward the roof of the vehicle, the domain width has to be extended accordingly in order to ensure a sufficient width to height ratio of the propagation region, which could be a useful hint for the future model design.
+During the design process of the finite element model, a parameter study aimed at finding the proper size of the exterior acoustic domain was performed. It has been shown that for our problem of interest, using a domain width of \SI{1}{\meter} could already provide good numerical accuracy without increasing the computational cost extensively. The study also showed that if the area of interest moved toward the roof of the vehicle, the domain width has to be extended in order to ensure a sufficient width-to-height ratio of the propagation region, which could be a useful hint for the future model design.
 % variation of the model underfloor geometry
-The results obtained from the variation of the underfloor geometry pointed out that the number of contemplated underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in a acceptable range. To increase the prediction accuracy, at least the essential underfloor components i.e. the bogie frame and the wheel should be included to ensure a sufficient attenuation of the acoustic wave in the underfloor area.
+The results obtained from the variation of the underfloor geometry pointed out that the number and type of considered underfloor components in the finite element model could affect the prediction results. Without taking the bogie into account, the simulated overall sound pressure level was overestimated at each evaluation position by about \SI{1}{\decibel} compared to the initial finite element model, which was still in an acceptable range. To increase the prediction accuracy, at least the essential underfloor components i.e.\ the bogie frame and the wheel should be included to ensure a sufficient shielding of the acoustic wave in the underfloor area.
 % variation of the ground impedance
-The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy if the absorption should be modeled, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to contain only real part.
+The inclusion of a fictitious ground absorption into the model showed that the actual attenuation of the acoustic pressure by the absorbing ground depended on the phase angle of the complex-valued surface impedance. The results obtained using different phase angles differ more strongly with increasing magnitude of the absorption coefficient. To increase the prediction accuracy, the full impedance characteristic of the absorptive surface should be known. For the case that only the absorption coefficient is provided, the surface impedance can be assumed to be real-valued.
 % variation of the frequency steps per one-third octave band
-Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviation introduced by possible occurred destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band could already provide a comparable prediction accuracy as the initial model using nine steps while saving up almost half of the total computation time.
+Finally, the obtained results from simulations using different intermediate frequency steps per one-third octave band indicated that the number of intermediate steps could be reduced with decreasing bandwidth without strongly affecting the simulation results. It is also suggested to use at least three intermediate steps per frequency band to prevent larger deviations introduced by possibly occurring destructive interference in the pressure field of the single frequency. In terms of the overall sound pressure level, the finite element model using five intermediate steps per frequency band could already provide a comparable prediction accuracy as the initial model using nine steps while saving up almost half of the total computation time.
 
 \subsection*{Future work}
 % future work
-The developed finite element model in the framework of this thesis provides a good starting point for the further research on the problem. Some example of possible future works are:
-
+The developed finite element model in the framework of this thesis provides a good starting point for further research on the problem. Some examples of possible future research directions are:
 \begin{itemize}
-	\item Validation of the existed finite element model under real operation condition i.e. against pass-by measurements in free field or in the tunnel.
-	\item Extend the sound source modeling approach to real sound sources, especially to the wheel-rail interface, which is the main noise source of the vehicle under dynamic condition.
+	\item Validation of the existing finite element model under real operation conditions i.e.\ against pass-by measurements in the free field or in a tunnel.
+	\item Extend the sound source modeling approach to real sound sources, especially to the wheel-rail interface, which is the main noise source of the vehicle under dynamic conditions.
 	\item Further investigation of the complex surface impedance, comparing the result with a validation measurement.
-	\item Apply the developed finite element modeling approach to other railway vehicle types with existing validation measurement.
+	\item Apply the developed finite element modeling approach to other railway vehicle types with existing validation measurements.
 \end{itemize}
