--- a/Kurzfassung.tex
+++ b/Kurzfassung.tex
@@ -2,4 +2,4 @@
 
 Lärmreduzierung ist ein wichtiges Thema bei der Entwicklung eines modernen, nachhaltigen und umweltfreundlichen Schienenfahrzeugs. Ein erheblicher Teil des Zuglärms stammt aus dem Unterflurbereich des Schienenfahrzeugs aufgrund des Rollgeräuschs, das durch den Rad-Schiene-Kontakt erzeugt wird und durch verschiedene Ausbreitungsmechanismen sowohl den Außen- als auch den Innengeräuschpegel des Fahrzeugs negativ beeinflussen kann. Aus diesem Grund ist es von großer Bedeutung, über ein aussagekräftiges Akustikmodell zu verfügen, mit dem das Unterbodengeräusch bereits in der Anfangsphase des Fahrzeugentwicklungsprozesses untersucht werden kann.
 
-In dieser Arbeit wird ein 3D Finite-Elemente-Modell zur Vorhersage der Unterflurlärmausbreitung von Schienenfahrzeugen entwickelt. Der Modellierungsansatz wird auf ein Ein-Viertel-Modell des U-Bahn-Zugs Typ X-Wagen von Siemens angewendet. Das entwickelte Modell wird anschließend mit einer Außendruckfeldmessung in der Wagenkastenumgebung validiert. Die erzielten Simulationsergebnisse zeigen eine starke Korrelation zwischen den vorhergesagten und den gemessenen Werten. Darüber hinaus wird im Rahmen dieser Arbeit auch der Einfluss der Variation bestimmter Modellparameter auf die Aussagekraft des Finite-Elemente-Modells untersucht.
+In dieser Arbeit wird ein 3D Finite-Elemente-Modell zur Vorhersage der Unterflurlärmausbreitung von Schienenfahrzeugen entwickelt. Der Modellierungsansatz wird auf ein Ein-Viertel-Modell des U-Bahn-Zugs Typ X-Wagen von Siemens angewendet. Das entwickelte Modell wird anschließend mit einer Außendruckfeldmessung in der Wagenkastenumgebung validiert. Die erzielten Simulationsergebnisse zeigen eine gute Übereinstimmung zwischen den vorhergesagten und den gemessenen Werten. Darüber hinaus wird im Rahmen dieser Arbeit auch der Einfluss der Variation bestimmter Modellparameter auf die Aussagekraft des Finite-Elemente-Modells untersucht.
